# lottery-api

./: CONTRIBUTING.md  README.md  composer.json  openapi.yaml
android/: README.md  build.gradle
android/src/main/java/com/apiverve/client/: APIClient.java
android/src/main/java/com/apiverve/lottery/: APIClient.java  APIException.java  APIResponse.java
android/src/main/java/com/apiverve/lottery/data/: ResponseModels.java
examples/: README.md
examples/csharp/: basic.cs
examples/java/: basic.java
examples/javascript/: basic.js  error-handling.js
examples/python/: basic.py
go/: README.md  client.go  go.mod  types.go
npm/: README.md  index.d.ts  index.js  package.json
npm/examples/: basic.js
nuget/: LotteryNumbersAPIClient.cs  LotteryNumbersAPIClient.csproj  LotteryNumbersAPIClient.sln  LotteryNumbersQueryOptions.cs  Readme.md  ResponseObj.cs
php/: README.md  composer.json
php/src/: Client.php
php/src/Exceptions/: APIException.php  ValidationException.php
python/: README.md  pyproject.toml
python/src/apiverve_lotterynumbers/: __init__.py  apiClient.py  setup.py  setup_dep.py
